--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
 
+// кодировка файлов (если используете русский язык в файлах)
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
@@ -16,9 +17,12 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation 'com.codeborne:selenide:5.19.0'
+    testImplementation'io.github.bonigarcia:webdrivermanager:5.3.1'
 }
 
 test {
     useJUnitPlatform()
+    // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
